--- a/src/app/distance/distance.component.html
+++ b/src/app/distance/distance.component.html
@@ -1,19 +1,23 @@
-<h3>Distance</h3>
+<div class="conversion-container">
 
-<div id="c-to-f" class="conversion-div w3-yellow">
-  Miles to Kilometers
-  <br><br>
-  Miles: <input type="text" [(ngModel)]="miles">
-  <br><br>
-  Kilometers: {{ miles * 1.61 | number }}
-</div>
+  <h3>Distance</h3>
 
-<br>
+  <div id="c-to-f" class="conversion-div w3-yellow">
+    Miles to Kilometers
+    <br><br>
+    Miles: <input type="text" [(ngModel)]="miles">
+    <br><br>
+    Kilometers: {{ miles * 1.61 | number }}
+  </div>
 
-<div id="c-to-f" class="conversion-div w3-yellow">
- Kilometers to Miles
-  <br><br>
-  Kilometers: <input type="text" [(ngModel)]="kilometers">
-  <br><br>
-  Miles:: {{ kilometers * 0.62 | number}}
+  <br>
+
+  <div id="c-to-f" class="conversion-div w3-yellow">
+  Kilometers to Miles
+    <br><br>
+    Kilometers: <input type="text" [(ngModel)]="kilometers">
+    <br><br>
+    Miles:: {{ kilometers * 0.62 | number}}
+  </div>
+
 </div>
