cleaned up and fixed

--- a/jsunitcalc/src/app/temperature/temperature.component.html
+++ b/jsunitcalc/src/app/temperature/temperature.component.html
@@ -1,19 +1,1 @@
-<h3>Temperature</h3>
-
-<div id="c-to-f" class="conversion-div w3-red">
-  Celsius to Fahrenheit
-  <br><br>
-  Celsius: <input type="text" [(ngModel)]="celsius">
-  <br><br>
-  Fahrenheit: {{ (celsius * (9 / 5)) + 32 | number }}
-</div>
-
-<br>
-
-<div id="c-to-f" class="conversion-div w3-red">
- Fahrenheit to Celsius
-  <br><br>
-  Fahrenheit: <input type="text" [(ngModel)]="fahrenheit">
-  <br><br>
-  Celsius: {{ (fahrenheit - 32) * (5 / 9) | number }}
-</div>
+<p>temperature works!</p>
