adding new functionality

--- a/src/app/temperature/temperature.component.html
+++ b/src/app/temperature/temperature.component.html
@@ -2,6 +2,8 @@
 
   <h3>Temperature</h3>
 
+  <button class="" (click)=setToFahrenheit()>Fahrenheit</button>
+
   <div id="c-to-f" class="conversion-div w3-red">
     Celsius to Fahrenheit
     <br><br>
