--- a/src/app/temperature/temperature.component.html
+++ b/src/app/temperature/temperature.component.html
@@ -2,7 +2,27 @@
 
   <h3>Temperature</h3>
 
-  <button class="" (click)=setToFahrenheit()>Fahrenheit</button>
+  <div id="c-to-f" class="conversion-div w3-red">
+    <h3>Pick a type, fill in a number</h3>
+    <br><br>
+    Number:<input type="text" [(ngModel)]="num1">
+    <br><br>
+    <button class="" ngClass="{{ fColor }}" (click)=set1Fahrenheit()>Fahrenheit</button>
+    <button class="" ngClass="{{ cColor }}" (click)=set1Celsius()>Celsius</button>
+    <button class="" ngClass="{{ kColor }}"(click)=set1Kelvin()>Kelvin</button>
+    <br><br>
+    <h3>What do you want to convert it to?</h3>
+    <br><br>
+    <button class="" ngClass="{{ fColor2 }}" (click)=set2Fahrenheit()>Fahrenheit</button>
+    <button class="" ngClass="{{ cColor2 }}" (click)=set2Celsius()>Celsius</button>
+    <button class="" ngClass="{{ kColor2 }}" (click)=set2Kelvin()>Kelvin</button>
+    <br><br>
+    <h3>Answer: {{ answer | number}}</h3>
+    <br><br>
+    <button (click)=convertTemp()>Convert</button>
+  </div>
+
+  <br><br>
 
   <div id="c-to-f" class="conversion-div w3-red">
     Celsius to Fahrenheit
