better styling for UI

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,21 @@
 <div id="" class="header-div">
-  <h1>js unit calc</h1>
+  <h1>js unit calc <i class="fas fa-calculator"></i></h1>
 </div>
 <div id="nav-div">
   <nav class="nav-style">
     <ul>
-      <li class="w3-red"><a routerLink="/temperature-component" routerLinkActive="active">Temperature</a></li>
-      <li class="w3-yellow"><a routerLink="/distance-component" routerLinkActive="active">Distance</a></li>
-      <li class="w3-blue"><a routerLink="/weight-component" routerLinkActive="active">Weight</a></li>
+      <li class="w3-red">
+        <a routerLink="/temperature-component" routerLinkActive="active">Temperature <i class="fas fa-thermometer-full"></i>
+        </a>
+      </li>
+      <li class="w3-yellow">
+        <a routerLink="/distance-component" routerLinkActive="active">Distance <i class="fas fa-ruler"></i>
+        </a>
+      </li>
+      <li class="w3-blue">
+        <a routerLink="/weight-component" routerLinkActive="active">Weight <i class="fas fa-balance-scale"></i>
+        </a>
+      </li>
     </ul>
   </nav>
 </div>
