--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div id="footer-div" class="">
-  &copy; {{ year | date:'yyyy'}} webcooltz
+  &copy; {{ year | date:'yyyy'}} <a href="https://github.com/webcooltz" target=_blank>webcooltz</a>
 </div>
