--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,16 +4,16 @@
 <div id="nav-div">
   <nav class="nav-style">
     <ul>
-      <li class="w3-red">
-        <a routerLink="/temperature-component" routerLinkActive="active">Temperature <i class="fas fa-thermometer-full"></i>
+      <li class="w3-red w3-btn">
+        <a routerLink="/temperature-component">Temperature <i class="fas fa-thermometer-full"></i>
         </a>
       </li>
-      <li class="w3-yellow">
-        <a routerLink="/distance-component" routerLinkActive="active">Distance <i class="fas fa-ruler"></i>
+      <li class="w3-yellow w3-btn">
+        <a routerLink="/distance-component">Distance <i class="fas fa-ruler"></i>
         </a>
       </li>
-      <li class="w3-blue">
-        <a routerLink="/weight-component" routerLinkActive="active">Weight <i class="fas fa-balance-scale"></i>
+      <li class="w3-blue w3-btn">
+        <a routerLink="/weight-component">Weight <i class="fas fa-balance-scale"></i>
         </a>
       </li>
     </ul>
