--- a/src/app/temperature/temperature.component.html
+++ b/src/app/temperature/temperature.component.html
@@ -4,49 +4,39 @@
 
   <h3>New UI</h3>
   <div id="c-to-f" class="conversion-div w3-red">
+
     <h3>Pick a type, fill in a number</h3>
-    <!-- <br><br> -->
+
     Number:<input type="text" [(ngModel)]="num1">
-      <!-- celsius -->
+    <!-- shows up with degree type depending on what button is pressed -->
       <span *ngIf="slider1 == 1">&#8451;</span>
-      <!-- fahrenheit -->
       <span *ngIf="slider1 == 2">&#8457;</span>
-      <!-- kelvin -->
       <span *ngIf="slider1 == 3">&#8490;</span>
     <br><br>
-    <button class="" ngClass="{{ fColor }}" (click)=set1Fahrenheit()>Fahrenheit</button>
-    <button class="" ngClass="{{ cColor }}" (click)=set1Celsius()>Celsius</button>
-    <button class="" ngClass="{{ kColor }}"(click)=set1Kelvin()>Kelvin</button>
+    <!-- changes color and values onClick-->
+    <button class="w3-button" ngClass="{{ fColor }}" (click)=set1Fahrenheit()>Fahrenheit</button>
+    <button class="w3-button" ngClass="{{ cColor }}" (click)=set1Celsius()>Celsius</button>
+    <button class="w3-button" ngClass="{{ kColor }}"(click)=set1Kelvin()>Kelvin</button>
     <br><br>
+
     <h3>What do you want to convert it to?</h3>
-    <!-- <br><br> -->
-    <button class="" ngClass="{{ fColor2 }}" (click)=set2Fahrenheit()>Fahrenheit</button>
-    <button class="" ngClass="{{ cColor2 }}" (click)=set2Celsius()>Celsius</button>
-    <button class="" ngClass="{{ kColor2 }}" (click)=set2Kelvin()>Kelvin</button>
+    <!-- changes color and values onClick-->
+    <button class="w3-button" ngClass="{{ fColor2 }}" (click)=set2Fahrenheit()>Fahrenheit</button>
+    <button class="w3-button" ngClass="{{ cColor2 }}" (click)=set2Celsius()>Celsius</button>
+    <button class="w3-button" ngClass="{{ kColor2 }}" (click)=set2Kelvin()>Kelvin</button>
     <br><br>
-<<<<<<< Updated upstream
-    <h3>Answer: {{ answer }}
-      <!-- celsius -->
-      <span *ngIf="slider2 == 1">&#8451;</span>
-      <!-- fahrenheit -->
-      <span *ngIf="slider2 == 2">&#8457;</span>
-      <!-- kelvin -->
-      <span *ngIf="slider2 == 3">&#8490;</span>
-    </h3>
-    <!-- <br><br> -->
-    <button (click)=convertTemp()>Convert</button>
-=======
     <h3>Answer: {{ answer | number}}</h3>
+    <!-- shows up with degree type depending on what button is pressed -->
+      <span *ngIf="slider2 == 1">&#8451;</span>
+      <span *ngIf="slider2 == 2">&#8457;</span>
+      <span *ngIf="slider2 == 3">&#8490;</span>
     <br><br>
     <button class="w3-black w3-button" (click)=convertTemp()>Convert</button>
->>>>>>> Stashed changes
   </div>
-
-  <br><br>
 
   <hr>
 
-  <h3>Old UI</h3>
+  <!-- <h3>Old UI</h3>
 
   <div id="c-to-f" class="conversion-div w3-red">
     Celsius to Fahrenheit
@@ -64,6 +54,6 @@
     Fahrenheit: <input type="text" [(ngModel)]="fahrenheit">
     <br><br>
     Celsius: {{ (fahrenheit - 32) * (5 / 9) | number }}
-  </div>
+  </div> -->
 
 </div>
